account/cmd/account/k8s/03-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: strip-account-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/account
