account/cmd/account/k8s/02-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: account
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          # image: bright/account:latest
          image: bright/account:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: service-config
              mountPath: /etc/account
      volumes:
        - name: service-config
          configMap:
            name: account-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: account
spec:
  ports:
    - name: http
      port: 30130
      targetPort: 30130
    - name: grpc
      port: 30131
      targetPort: 30131
    - name: healthz
      port: 30132
      targetPort: 30132
    - name: pprof
      port: 6060
      targetPort: 6060
  selector:
    app: account
