account/cmd/account/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: account-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-account-prefix@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/account/
            pathType: Prefix
            backend:
              service:
                name: account
                port:
                  number: 30130
